--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "hbs": "^4.2.0",
+    "lightbox2": "^2.11.3",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
